--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,20 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+
+  redis:
+    host: localhost
+    port: 6379
+#    password: your_password_here  # 如果没有密码，可以省略这一行
+    timeout: 2000  # 可选，连接超时时间，单位是毫秒
+    jedis:
+      pool:
+        max-idle: 8  # 最大空闲连接数
+        min-idle: 0  # 最小空闲连接数
+        max-total: 8  # 最大连接数
+        max-wait: -1ms  # 最大等待时间
+
+# 告诉mapper文件的位置
+mybatis-plus:
+  mapper-locations: classpath*:/mapper/**/*.xml
